Fixed the progress bar glow overflow glitch.

--- a/src/stylesheets/layouts/_profile.scss
+++ b/src/stylesheets/layouts/_profile.scss
@@ -10,6 +10,7 @@
     .wrapper{
       padding: 16px;
       border: 1px solid #55708d;
+      border-width: 0px 1px 1px 0;
     }
     h2{
       font-size: 32px;
@@ -52,7 +53,8 @@ $glow-color:#04bfff;
   opacity: 0.4;
 }
 .progress-item{
-  margin-bottom: 24px;
+  margin-bottom: 8px;
+  padding-bottom: 16px;
 }
 .progress-bar {
   height:3px;
